# TD-SV_ON

./: README.md  csv_to_header.py
DSCNN/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old  버전, 설정 등등.txt
DSCNN/main/: CMakeLists.txt  ble_communication.c  ble_communication.h  main.cc  main_functions.cc  main_functions.h  model.cc
ESP32_BLE_template/: README.txt
ESP32_BLE_template/ESP32_firmware/ble_template/: CMakeLists.txt
ESP32_BLE_template/Reciver_web/: audio_realtime.html  audio_realtime_wave_1.html  audio_realtime_wave_4_pdm.html  audio_realtime_wave_4_pdm_uart.html  audio_save.html  index.html
SV/main/: app_main.c  main.c  melspec.c  mfcc.c  speaker_verifier.c
audio_test/: CMakeLists.txt  sdkconfig  sdkconfig.old
audio_test/main/: CMakeLists.txt  app_button.c  app_main.c  mfcc.c  model_manager.cc  speech_provider.c
elevator/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig  sdkconfig.old
elevator/main/: ._app_speech.c  CMakeLists.txt  Kconfig.projbuild  app_main.c  app_speech.c  dscnn.c  mfcc.c  설명.txt
tflite_inference_test/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old  tmpvbz6c4ksidf_1444297
tflite_inference_test/main/: CMakeLists.txt  app_main.c  ble_communication.c  dummy_test.c  imu_provider.c  lcd_manager.c  model_manager.cc  send_data.c  speech_provider.c  state_controller.c  template.c  vision_provider.c
tflite_inference_test/main/include/: app_main.h  ble_communication.h  dummy_test.h  imu_provider.h  lcd_manager.h  mfcc.h  send_data.h  state_controller.h  template.h  vision_provider.h
(+26 files in other folders)
